@@ -1,4 +1,5 @@
 Development
+	Infrastructure to support windowless mode, but it doesn't work
 	Convert internal preference store to gm_pref_store from libgmlib
 	Reuse gm_tempname from libgmlib saving duplicate code
 	Merge in libgmlib, it is pulled from the gnome-mplayer svn
